<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能巡检系统</string>
    <string name="send_way">送货时间</string>
    <string name="payMoney_way">付款方式</string>
    <string name="hello">Hello World</string>    
    <string name="location">location is  doing</string>
    <string name="tasklist_result">反馈</string>
    <string name="detail">详细</string>
    <string name="detailSymbol">   >></string>
    <string name="taskresult_submit_result">提交反馈</string>
    <string name="taskresult_finished_time">完成时间</string>
    <string name="taskresult_finished_person">完成人员</string>
    <string name="taskresult_finished_record">完成记录</string>
    <string name="taskresult_position_coordinates">位置坐标</string>
    <string name="task_name">任务名称</string>
    <string name="taskresult_task_title">任务完成反馈信息</string>
    <string name="taskresult_record">填写任务反馈</string>
    <string name="taskdetail_description">任务描述</string>
    <string name="taskdetail_task_state">完成状态</string>
    <string name="taskdetail_task_plan_time">计划时间</string>
    <string name="taskdetail_task_finished_time">实施时间</string>
    <string name="taskdetail_task_start_position">开始位置</string>
    <string name="taskdetail_task_finished_position">结束位置</string>
    <string name="operating_person">操作人员</string>
    <string name="operating_department">完成部门</string>
    <string name="pipeline_name">管线名称</string>
    <string name="task_list">任务列表</string>
    <string name="taskmapview_task_map">查看更多...</string>
    <string name="taskmapview_start_checking">开始巡检</string>
    <string name="taskmapview_restart">重起</string>
    <string name="welcomeContent">欢迎使用巡线系统</string>
    <string name="loginview_user_name">用户名：</string>
    <string name="loginview_password">密码：</string>
    <string name="loginview_authorization_code">验证码：</string>
    <string name="loginview_login">登  录</string>
    <string name="loginview_name_message">您的姓名，如：xxx</string>
    <string name="loginview_password_message">请输入密码 ***</string>
    <string name="loginview_authorization_message">验证码：******</string>
    <string name="loginview_authorization_failor">验证失败！请联系管理员！</string>
    <string name="tasklist_left_img">图片</string>
     <string name="tasklist_photo_img">拍照</string>
     <string name="tasklist_list_img">显示图片</string>
       <string name="view_audio">语音</string>
    <string name="view_photo">拍照</string>
    <string name="view_video">视频</string>
    <string name="initializing_view_message">系统正在初始化... 请耐心等待！</string>
    <string name="return_main">返回</string>
    <string name="taskmap_view_end_checking">结束巡检</string>
    <string name="taskmap_view_pause_checking">挂起</string>
    <string name="taskmap_view_return_main">返回首页</string>
    <string name="taskresult_selector_message">请选择...</string>
    <string name="task_result_view_feedback_content">请填写任务完成情况记录\n内容如：\n测量数据\n周围施工情况</string>
    <string name="taskmap_view_record_data">记录反馈</string>
    <string name="taskmap_view_context_menu_title">巡检操作</string>
    <string name="refresh_main">刷新</string>
    <string name="current_location_in_beijing">志新西路</string>
    <string name="taskmap_view_map">地图</string>
    <string name="taskdetail_view_history_record">反馈历史记录 </string>
    <string name="exit_message">再按一次退出程序</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map">Basic Map</string>
    <string name="basic_description">Launches a map</string>
    <string name="camera_demo">Camera</string>
    <string name="camera_description">Demonstrates camera functions.</string>
    <string name="clear_map">Clear</string>
    <string name="compass">Compass</string>
    
    <string name="Rotate">Rotate</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">智能巡检系统</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="hue">Hue</string>
    <string name="events_demo">Events</string>
    <string name="events_description">Demonstrates events functions.</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="groundoverlay_demo">Ground Overlays</string>
    <string name="groundoverlay_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>   

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers</string>
    <string name="layers_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location Source Demo</string>
    <string name="locationsource_description">Demonstrates how to use a custom location source.</string>
    <string name="locationGPS_demo">LocationGPS Demo</string>
    <string name="locationGPS_description">Demonstrates how to use a locationGPS.</string>
    <string name="locationNetwork_description">Demonstrates how to use LocationNetwork </string>
    <string name="locationNetwork_demo">LocationNetwork Demo</string>
    <string name="marker_demo">Markers</string>
    <string name="marker_description">Demonstrates how to add Markers to a map.</string>
    <string name="multi_map_demo">Multiple Maps</string>
    <string name="multi_map_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_button">MyLocation Button</string>
    <string name="mylocation_layer">MyLocation Layer</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="options_demo">Options</string>
    <string name="options_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo">Polygons</string>
    <string name="polygon_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo">Polylines</string>
    <string name="polyline_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo">Programmatically add map</string>
    <string name="programmatic_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_sydney_polyline">管线坐标图示</string>
    <string name="properties_sydney_polygon">Properties for Sydney Polygon</string>
    <string name="route_demo">Route</string>
    <string name="reoute_description">Demonstrates how to add route to a map.</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map">Retain map</string>
    <string name="retain_map_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_overlay_demo">Tile Overlays</string>
    <string name="tile_overlay_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings</string>
    <string name="uisettings_description">Demonstrates how to alter user interface settings.</string>
    <string name="geocoder_demo">geocoder</string>
    <string name="geocoder_description">Demonstrates how to use geocoder.</string>
    <string name="poisearch_demo">poisearch</string>
    <string name="poisearch_description">Demonstrates how to poisearch to a map.</string>
    <string name="offlinemap_demo">offlinemap</string>
    <string name="offlinemap_description">Demonstrates how to use offlinemap.</string>
     <string name="mapview_demo">mapview</string>
    <string name="mapview_description">Demonstrates how to use mapview.</string>
    <string name="search_title">poisearch  key</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">Zoom Buttons</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">Scale</string>

    <!-- offlinemap -->
    <string name="beijing">"beijing"</string>
    <string name="start">"start"</string>
    <string name="pause">"pause"</string>
    <string name="stop">"stop"</string>
    <string name="remove">"remove"</string>
    
    <string name="logo_position">LogoPosition</string>
    <string name="bottom_left">BottomLeft</string>
    <string name="bottom_center">BottomCenter</string>
    <string name="bottom_right">BottomRight</string>
    <string name="map_screenshot">MapScreenshot</string>
    <string name="get_scale">GetScale</string>

</resources>
