<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" 
	android:id="@+id/tripList"		
	android:paddingLeft="10dp" 
	android:paddingRight="10dp">
    
<!-- 登录信息  -->

	<View android:layout_width="fill_parent" 
	    android:layout_height="20dip" />
	<!-- 用户名 -->
	<!-- <TextView android:id="@+id/feedback_title" 
	    android:textColor="#FFFFFF"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/loginview_user_name" /> -->
	<EditText android:id="@+id/edtUserName" 
	    android:textColor="@color/black"
	    android:hint="@string/loginview_name_message"
	    android:text=""
	    android:background="@drawable/editshape"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dip"			    
	    android:layout_marginTop="10dp" 
	    android:layout_marginBottom="10dp" 
		android:background="#FF909090" />
	<!-- 密码 -->
	<!-- <TextView android:layout_width="fill_parent"
		android:textColor="#FFFFFF" 
		android:layout_height="wrap_content"
		android:text="@string/loginview_password" /> -->
	<EditText android:id="@+id/edtPwd" 
	    android:textColor="@color/black"
	    android:text=""
	    android:background="@drawable/editshape"
	    android:inputType="textPassword"
	    android:hint="@string/loginview_password_message"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dip"
	    android:layout_marginTop="10dp" 
	    android:layout_marginBottom="10dp" 
		android:background="#FF909090" />
	<!-- 验证码 -->
	<!-- <TextView android:layout_width="fill_parent"
		android:textColor="#FFFFFF" 
		android:layout_height="wrap_content"
		android:text="@string/loginview_authorization_code" /> -->
	<EditText android:id="@+id/edtYzm" 
	    android:background="@drawable/editshape"
	    android:layout_width="fill_parent"
	    android:hint="@string/loginview_authorization_message"
	    android:inputType="textWebPassword"
	    android:enabled="false"
		android:layout_height="wrap_content" />
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dip"
	    android:layout_marginTop="10dp" 
	    android:layout_marginBottom="10dp" 
		android:background="#FF909090" />
	<!-- 登录按钮 -->

		<Button
		    android:id="@+id/btnLogon"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_gravity="center"
		    android:background="@drawable/buttonshape2"
		    android:gravity="center"
		    android:text="@string/loginview_login"
		    android:textSize="19sp" />

		<!-- 验证反馈 -->

		<TextView
		    android:id="@+id/txtResult"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="15dp"
		    android:gravity="center"
		    android:text="@string/loginview_authorization_failor"
		    android:textColor="@color/red" />
			
</LinearLayout>