<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@color/task_list_view"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- 标题行 -->
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:background="@color/gray"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:gravity="center">
		<!-- 返回按钮 -->
		<Button
		    android:id="@+id/btnReturn"
		    android:layout_width="80dp"
    	    android:layout_height="50dp"
    	    android:layout_marginLeft="0dp"
		    android:background="@drawable/buttonshape5"
		    android:drawableLeft="@drawable/returnback"
		    android:paddingLeft="15dp"
    	    android:paddingTop="8dp"
		    android:text="" />
		<TextView android:id="@+id/title" 
		    android:layout_width="0dp"
			android:layout_height="wrap_content" 
			android:text="@string/taskresult_record"
			android:minHeight="50dp"
			android:paddingRight="75dp"
        	android:textSize="23sp"
        	android:textColor="#FFFFFFFF"
			android:background="@color/gray"
			android:layout_gravity="center"
			android:layout_weight="2" 
			android:textIsSelectable="true"
			android:gravity="center" />
	</LinearLayout>
	<ScrollView android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<!-- 任务反馈信息 -->
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/taskresult_task_title"
				android:textColor="#FF000000" 
				android:textSize="15sp"
				android:layout_margin="5sp" />
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:background="#f5f5f5" 
				android:layout_margin="5sp"
				android:padding="5sp">
				<LinearLayout android:orientation="horizontal"
				    android:layout_margin="5sp"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<!--  任务名称 -->
					<TextView 
					    android:layout_width="100dp"
						android:layout_height="wrap_content" 
						android:text="@string/task_name"
						android:textSize="15sp"
						android:textColor="#FF000000" />
					
					<TextView 
					    android:layout_width="200dp"
						android:layout_height="wrap_content" 
						android:text="" 
						android:id="@+id/getTaskName"
						android:textSize="15sp"
						android:textColor="#FF000000" />
				</LinearLayout>
				<View android:layout_width="fill_parent" 
				    android:layout_height="1dip"
				    android:layout_margin="5dp" 
				    android:layout_marginLeft="8dp" 
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="9dp"
					android:background="#FF909090" />
				<LinearLayout android:orientation="horizontal"
				    android:layout_margin="5sp"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<!-- 任务内容 -->

					<EditText
					    android:id="@+id/taskContent"
					    android:layout_width="fill_parent"
					    android:layout_height="140dp"
					    android:background="@drawable/editshape"
					    android:hint="@string/task_result_view_feedback_content"
					    android:inputType="textMultiLine"
					    android:lines="10"
					    android:textColor="@color/black"
					    android:textColorHint="#c9c9c9" />

				</LinearLayout>

				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_margin="5sp"
				    android:orientation="horizontal" >
					
				 	<ImageView
				 	    android:id="@+id/imgPhoto"
				 	    android:layout_width="50dp"
				 	    android:layout_height="30dp"
				 	    android:background="@color/darkgray"
				 	    android:clickable="true"
				 	    android:contentDescription="@string/tasklist_photo_img"
				 	    android:src="@drawable/ic_action_photo" />
				 	<!--
					<Button
    	    			android:id="@+id/btnPhoto"
    	    			android:layout_width="50dp"
    	    			android:layout_height="30dp"
    	    			android:background="@drawable/buttonshape5"
    	    			android:drawableLeft="@drawable/ic_action_photo"
    	    			android:paddingLeft="0dp"
    	    			android:text="" />-->
					<!-- 多选 -->
					<TextView 
					    android:id="@+id/recordSelector"
					    android:layout_width="165dp"
					    android:layout_marginLeft="60dp"
						android:layout_height="30dp" 
						android:paddingTop="3dp"
						android:textSize="18sp"
						android:text="@string/taskresult_selector_message"
						android:textColor="#FF000000" 
						/>
					
					<ImageView
					    android:id="@+id/imgArrow" 
						android:layout_width="50dp"
						android:layout_height="30sp" 
						android:src="@drawable/arrow"
						android:clickable="true"						
						android:contentDescription="@string/tasklist_left_img"/>
					
					
				</LinearLayout>
				<!-- 显示图片 -->

				<ImageView
				    android:id="@+id/imgView"
				    android:layout_width="match_parent"
				    android:layout_height="450dp"
				    android:background="#8B8B7A"
				    android:contentDescription="@string/tasklist_list_img"
				    android:visibility="gone"/>
				
				<View android:layout_width="fill_parent" 
				    android:layout_height="1dip"
				    android:layout_margin="5dp" 
				    android:layout_marginLeft="8dp" 
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="9dp"
					android:background="#FF909090" />
				<!-- 位置坐标 -->
				<LinearLayout android:orientation="horizontal"
				    android:layout_margin="5sp"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<TextView 
					    android:layout_width="100dp"
						android:layout_height="wrap_content" 
						android:text="@string/taskresult_position_coordinates"
						android:textSize="15sp"
						android:textColor="#FF000000" />
					
					<TextView 
					    android:layout_width="200dp"
						android:layout_height="wrap_content" 
						android:text="" 
						android:id="@+id/posCoor"
						android:textSize="15sp"
						android:textColor="#FF000000" />
				</LinearLayout>
				<View android:layout_width="fill_parent" 
				    android:layout_height="1dip"
				    android:layout_margin="5dp" 
				    android:layout_marginLeft="8dp" 
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="9dp"
					android:background="#FF909090" />
			</LinearLayout>
			<!-- 完成人情况 -->
			
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:background="#f5f5f5" 
				android:layout_margin="5sp"
				android:padding="5sp">
				<LinearLayout android:orientation="horizontal"
				    android:layout_margin="5sp"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<TextView 
					    android:layout_width="100dp"
						android:layout_height="wrap_content" 
						android:textSize="15sp"
						android:text="@string/taskresult_finished_person"
						android:textColor="#FF000000" 
						android:layout_gravity="center" />
					
					<TextView 
						android:layout_width="200dp"
						android:layout_height="wrap_content" 
						android:text="" 
						android:textSize="15sp"
						android:id="@+id/finishedPerson"
						android:textColor="#FF000000" />
				</LinearLayout>
				<View android:layout_width="fill_parent" 
				    android:layout_height="1dip"
				    android:layout_margin="5dp" 
				    android:layout_marginLeft="8dp" 
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="9dp"
					android:background="#FF909090" />
				<LinearLayout android:orientation="horizontal"
				    android:layout_margin="5sp"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<TextView 
					    android:layout_width="100dp"
						android:layout_height="wrap_content" 
						android:textSize="15sp"
						android:text="@string/taskresult_finished_time"
						android:textColor="#FF000000" 
						android:layout_gravity="center" />
					
						<TextView android:layout_width="200dp"
						android:layout_height="wrap_content" 
						android:textSize="15sp"
						android:text="" 
						android:id="@+id/finishedTime"
						android:textColor="#FF000000" />
				</LinearLayout>
				<View android:layout_width="fill_parent" 
				    android:layout_height="1dip"
				    android:layout_margin="5dp" 
				    android:layout_marginLeft="8dp" 
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="9dp"
					android:background="#FF909090" />
			</LinearLayout>

			<Button android:id="@+id/submitResult" 
			    android:layout_width="140sp"
				android:layout_height="45sp" 
				android:textSize="18sp"
				android:background="@drawable/buttonshape2"
				android:text="@string/taskresult_submit_result"
				android:layout_gravity="center" 
				android:layout_marginTop="10sp"
				android:layout_marginBottom="10sp" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>
